# localization

./: .gitignore
data_pre/: flow.py  result_lecd_xuda.txt
data_pre/gtpose/xuda/: gt_pose_xuda-less.txt
src/lecd/: CMakeLists.txt  flow.py  package.xml
src/lecd/include/: config.yaml  contour.h  contour_db.h  contour_mng.h  correlation.h  evaluator.h  lidar_rec.h
src/lecd/include/cont2_ros/: spinner_ros.h
src/lecd/include/tools/: algos.h  bm_util.h
src/lecd/lecd_match/: test_localization.cpp
src/lecd/lecd_match/match/: contour.cpp  contour_db.cpp  contour_mng.cpp  correlation.cpp  evaluator.cpp
src/lecd/lidar_rec/: lidar_rec.cpp
src/lecd/test/: flow.py  plot_cpu_memory.py  record_start.sh
src/tool/: gnsstokittipose.py  gps_trajectory_map.html  gpspathinsatel.py  lidar-bagtobin.py  map-visualize.py  path-visualize.py  pr.mpe.py
